<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".consult_customer">

    <EditText
        android:id="@+id/txtId"
        android:layout_width="178dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/txtId"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/txtMunicipality"
        android:layout_width="281dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/txtMunicipality"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFullname" />

    <EditText
        android:id="@+id/txtDepartment"
        android:layout_width="281dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/txtDepartment"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMunicipality" />

    <EditText
        android:id="@+id/txtAddress"
        android:layout_width="281dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/txtAddress"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDepartment" />

    <EditText
        android:id="@+id/txtPhone"
        android:layout_width="281dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/txtPhone"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAddress" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="281dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/txtEmail"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPhone" />

    <Spinner
        android:id="@+id/spStatus"
        android:layout_width="281dp"
        android:layout_height="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.561"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <EditText
        android:id="@+id/txtRemarks"
        android:layout_width="281dp"
        android:layout_height="40dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/txtRemarks"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spStatus" />

    <Button
        android:id="@+id/btnUpdateCustomer"
        android:layout_width="281dp"
        android:layout_height="40dp"
        android:onClick="onClick"
        android:text="@string/btnUpdateCustomer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.561"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRemarks" />

    <Button
        android:id="@+id/btnDeleteCustomer"
        android:layout_width="281dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:onClick="onClick"
        android:text="@string/btnDeleteCustomer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.561"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUpdateCustomer" />

    <Button
        android:id="@+id/btnSearchCustomer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:onClick="onClick"
        android:text="@string/btnSearchCustomer"
        app:layout_constraintBottom_toTopOf="@+id/txtFullname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toEndOf="@+id/txtId"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/txtFullname"
        android:layout_width="281dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/txtFullname"
        android:inputType="textPersonName"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.564"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtId" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tvConsultCustomer"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.268"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>