<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".add_customer_activity">

    <TextView
        android:id="@+id/tvAddCustomer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/tvAddCustomer"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.247"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtId"
        android:layout_width="281dp"
        android:layout_height="40dp"
        android:layout_marginTop="96dp"
        android:ems="10"
        android:hint="@string/txtId"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtFullname"
        android:layout_width="281dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/txtFullname"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtId" />

    <EditText
        android:id="@+id/txtMunicipality"
        android:layout_width="281dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/txtMunicipality"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFullname" />

    <EditText
        android:id="@+id/txtDepartment"
        android:layout_width="281dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/txtDepartment"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMunicipality" />

    <EditText
        android:id="@+id/txtAddress"
        android:layout_width="281dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/txtAddress"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDepartment" />

    <EditText
        android:id="@+id/txtPhone"
        android:layout_width="281dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/txtPhone"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAddress" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="281dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/txtEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPhone" />

    <Spinner
        android:id="@+id/spStatus"
        android:layout_width="281dp"
        android:layout_height="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <EditText
        android:id="@+id/txtRemarks"
        android:layout_width="281dp"
        android:layout_height="43dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/txtRemarks"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spStatus" />

    <Button
        android:id="@+id/btnAddCustomer"
        android:layout_width="282dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:onClick="onClick"
        android:text="@string/btnAddCustomer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRemarks" />

</androidx.constraintlayout.widget.ConstraintLayout>